manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-dotnet-web
  labels:
    app.kubernetes.io/instance: demo-dotnet-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: demo-dotnet-web
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: demo-dotnet-web
    spec:
      containers:
        - name: demo-dotnet-web
          image: "DEPLOYMENT_IMAGE"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe: null
          readinessProbe: null
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
