manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-dotnet-web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: demo-dotnet-web
